<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/SignUpCoordinatorLayout">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signUpRelative"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.bry.adcafe.ui.CreateAccountActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUpText"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/nameText"
                android:nextFocusDown="@+id/emailEditText"
                android:padding="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/emailText"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/passwordEditText"
                android:padding="10dp"
                android:layout_marginBottom="25dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:gravity="left"
                android:textSize="11sp"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:layout_marginBottom="7dp"
                android:id="@+id/dontForgetStuff"
                android:textColor="@color/colorPrimary"
                android:text="@string/signUpPasswordNote"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/passwordHintText"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/confirmPasswordEditText"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/confirmPasswordText"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/student"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="student" />

                <RadioButton
                    android:id="@+id/lecturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="lecturer" />


            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:id="@+id/SignUpCard"
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="7dp"
                app:cardElevation="0dp"
                android:layout_marginTop="25dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="13dp"
                    android:text="SIGN UP."
                    android:textSize="11sp"
                    android:layout_height="wrap_content" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/createUserButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/signUpText"
                android:visibility="gone"
                style="?android:attr/borderlessButtonStyle"
                android:background="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/haveAccountQuestion"
                android:id="@+id/loginTextView"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/textLink"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="10dp"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:textSize="10sp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:text="eula text..."/>

        </LinearLayout>

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/signUpText"-->
        <!--android:textColor="@color/colorPrimaryDark"-->
        <!--android:textSize="30sp"-->
        <!--android:textStyle="bold"-->
        <!--android:layout_above="@+id/linearLayout"-->
        <!--android:layout_centerHorizontal="true" />-->

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_height="match_parent">



        <ProgressBar
            android:id="@+id/progressBarSignUp"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/settingUpAccountMessage"
            android:id="@+id/creatingAccountLoadingText"
            android:textSize="10sp"
            android:visibility="gone"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/ConfirmEmailLayout"
        android:visibility="gone"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:text="Confirm Email."
            android:textSize="20sp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/confirmMessage"
            android:textSize="14sp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/confirmedEmailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Confirmed!"
            android:background="@color/colorAccent"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/recreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Sign up again."
            android:background="@color/colorAccent"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>